--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creditcards",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Utility methods for formatting and validating credit cards",
   "main": "./src",
   "scripts": {
@@ -16,7 +16,7 @@
     "validation",
     "formatting"
   ],
-  "author": "Ben Drucker <bvdrucker@gmail.com> (http://www.bendrucker.me/)",
+  "contributors": ["Ben Drucker <bvdrucker@gmail.com> (http://www.bendrucker.me/)", "Ben Bean <bbean86@gmail.com>"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bendrucker/creditcards/issues"
