--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "creditcards",
-  "version": "1.2.0",
+  "name": "bp-creditcards",
+  "version": "1.3.0",
   "description": "Utility methods for formatting and validating credit cards",
   "main": "./src",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bendrucker/creditcards.git"
+    "url": "https://github.com/bbean86/creditcards.git"
   },
   "keywords": [
     "credit",
@@ -16,12 +16,15 @@
     "validation",
     "formatting"
   ],
-  "contributors": ["Ben Drucker <bvdrucker@gmail.com> (http://www.bendrucker.me/)", "Ben Bean <bbean86@gmail.com>"],
+  "contributors": [
+    "Ben Drucker <bvdrucker@gmail.com> (http://www.bendrucker.me/)",
+    "Ben Bean <bbean86@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bendrucker/creditcards/issues"
+    "url": "https://github.com/bbean86/creditcards/issues"
   },
-  "homepage": "https://github.com/bendrucker/creditcards",
+  "homepage": "https://github.com/bbean86/creditcards",
   "devDependencies": {
     "chai": "1",
     "istanbul": "0",
@@ -29,5 +32,9 @@
   },
   "dependencies": {
     "camel-case": "0.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "author": "Ben Bean <bbean86@gmail.com>"
 }
